@@ -1,3 +1,13 @@
+2013-01-02  Cris Neckar  <cdn@chromium.org>
+
+        Initialize WebInputEvent to prevent sending uninitialized bytes with IPC messages.
+        https://bugs.webkit.org/show_bug.cgi?id=105934
+
+        Reviewed by James Robinson.
+
+        * public/WebInputEvent.h:
+        (WebKit::WebInputEvent::WebInputEvent):
+
 2013-01-02  David Tseng  <dtseng@google.com>
 
         AX: Chromium needs platform localized strings for media controls.
